# PythonWebAppFullStackDemo

./: LICENSE  Makefile  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 904f38475767_init.py
backend/app/: main.py
backend/app/api/v1/: routers.py
backend/app/api/v1/endpoints/: auth.py  comment.py  user.py
backend/app/core/: config.py  security.py
backend/app/database/: session.py
backend/app/database/models/: comment.py  user.py
backend/app/services/: comment_service.py  user_service.py
backend/app/utils/: log.py
backend/scripts/: migrate_db.py  start_app.sh
backend/static/: 404.html  index.html  index.txt  login.html  login.txt  register.html  register.txt
backend/static/_next/static/chunks/: webpack-f9b8003694cb5dd3.js
backend/static/_next/static/chunks/app/: layout-854c20e28a699d72.js  page-a81a2f0a788a118e.js
backend/static/_next/static/chunks/app/login/: page-1382d26636666c67.js
backend/static/_next/static/chunks/app/register/: page-c8128d69bd7f9c1c.js
backend/static/_next/static/css/: 8bde0803245966f1.css
backend/static/_next/static/lOKjbi7Rd5o8S9ptHpE8Z/: _buildManifest.js
backend/tests/unit/: test_comment_service.py  test_user.py
ui/: next.config.ts  package-lock.json  package.json  tsconfig.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/components/: Header.tsx
ui/app/components/auth/: LoginForm.tsx  RegisterForm.tsx
ui/app/context/: UserContext.tsx
ui/app/login/: page.tsx
ui/app/register/: page.tsx
(+2 files in other folders)
